# CNNcpp

./: .gitignore  ACTIVATE_CI.md  CMakeLists.txt  CROSS_PLATFORM_COMPLETE.md  GITHUB_ACTIONS_GUIDE.md  OPENCV_COMPLETE.md  OPENCV_PIP_MIGRATION.md  OPTIMIZATION_JOURNEY.md  PLATFORM_COMPATIBILITY.md  QUICKSTART.md  README.md  START_HERE.md  USAGE.md  WINDOWS_TESTING_REQUEST.md  build.py  requirements.txt  split_dataset.py  test_model.py  train_model.py
.github/workflows/: test.yml
config/: data_1.json  data_2.json
cpp/: bindings.cpp  dataloader.cpp  dataloader.h  layers.cpp  layers.h  loss.cpp  loss.h  metrics.cpp  metrics.h  model.cpp  model.h  ops.cpp  ops.h  optimizer.cpp  optimizer.h  tensor.cpp  tensor.h
python/: config.py  evaluate.py  sample_config.json  train.py
python/mydl/: __init__.py  dataset_loader.py  mydl_cpp
